--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "meteor-node-stubs": "^0.4.1",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "uploadcare-widget": "^3.7.7"
   },
   "meteor": {
     "mainModule": {
